--- a/src/client/assets/styles/common.css
+++ b/src/client/assets/styles/common.css
@@ -46,13 +46,25 @@ body {
     /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2) inset; */
 }
 
-.h1 {
-    font-family: Poppins;
-    font-style : normal;
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
     font-weight: bold;
+
+    color: #000000;
+}
+
+.h1 {
     font-size  : 39px;
     line-height: 58px;
-    color      : #000000;
+}
+
+.h2 {
+    font-size  : 25px;
+    line-height: 37px;
 }
 
 .link {
@@ -62,4 +74,14 @@ body {
 
 .link:hover {
     text-decoration: underline;
+}
+
+button {
+    padding: 0;
+
+    border    : none;
+    background: none;
+    outline   : none;
+
+    font-family: Poppins;
 }
