--- a/src/client/assets/styles/variables.css
+++ b/src/client/assets/styles/variables.css
@@ -7,4 +7,6 @@
     --btn-bg-primary   : var(--color-primary);
     --btn-color-primary: #fff;
     --header-color     : #000;
+
+    --font-family: Poppins, 'Open Sans';
 }
