--- a/src/client/assets/styles/common.css
+++ b/src/client/assets/styles/common.css
@@ -82,3 +82,22 @@ button {
 .hidden {
     display: none !important;
 }
+
+.scrollbar {
+    max-height: 100%;
+    overflow-y: auto;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
+    background-color  : #F5F5F5;
+}
+
+.scrollbar::-webkit-scrollbar {
+    width           : 4px;
+    background-color: #F5F5F5;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(66, 63, 99, 0.2);
+}
