--- a/src/client/assets/styles/settings.css
+++ b/src/client/assets/styles/settings.css
@@ -1,3 +1,7 @@
+:root {
+    --settings-divider-color: #ECE9FA;
+}
+
 .settings {
     width: 430px;
 }
@@ -27,7 +31,7 @@
     width : 100%;
     height: 7px;
 
-    background-color: #ECE9FA;
+    background-color: var(--settings-divider-color);
 }
 
 .settings__form {
@@ -49,11 +53,11 @@
 .settings-list__li {
     height: 43px;
 
-    border-bottom: 7px solid #ECE9FA;
+    border-bottom: 7px solid var(--settings-divider-color);
 }
 
 .settings-list__li:first-of-type {
-    border-top: 7px solid #ECE9FA;
+    border-top: 7px solid var(--settings-divider-color);
 }
 
 .settings-list__button {
