--- a/src/client/static/components/brief-information.tmpl.njk
+++ b/src/client/static/components/brief-information.tmpl.njk
@@ -1,30 +1,35 @@
-{% from "components/avatar.tmpl.njk" import avatar %}
-
-{% macro briefInformation(avatarSrc = '', changeNameFunc = null, applyNewNameFunc = null, uploadFunc = null, name = '', lastVisit = '') %}
+{% macro briefInformation(avatarComponentId, canChangeName, displayedNameInput, name = '', lastVisit = '') %}
     <div class="brief-information">
         <div class="brief-information__avatar">
-            {{avatar(
-                avatarSrc = avatarSrc,
-                uploadFunc = uploadFunc
-            )}}
+            <ng-container data-componentsIds="{{avatarComponentId}}"></ng-container>
         </div>
         <div class="brief-information__text">
-            <div class="brief-information__name-wrapper">
-                <p class="brief-information__name">{{name}}</p>
-                {% if changeNameFunc %}
-                    <input id="displayNameInput" type="text" value="{{name}}" class="brief-information__name-input hidden" required="required"/>
 
-                    <button class="btn-icon brief-information__edit-btn" onclick="({{changeNameFunc}})()">
-                        {% include 'icons/pencil.tmpl.njk' %}
-                    </button>
-                    <button class="btn-icon hidden brief-information__apply-btn" onclick="({{applyNewNameFunc}})()">
+            {% if displayedNameInput %}
+                <form class="brief-information__name-wrapper" onsubmit="changeName">
+                    <input name="displayNameInput" type="text" value="{{name}}" class="brief-information__name-input" required="required"/>
+
+                    <button class="btn-icon brief-information__apply-btn" submit="submit">
                         {% include 'icons/done.tmpl.njk' %}
                     </button>
-                {% endif %}
-            </div>
+                </form>
+            {% else %}
+                <div class="brief-information__name-wrapper">
+                    <p class="brief-information__name">{{name}}</p>
+
+                    {% if canChangeName %}
+                        <button class="btn-icon brief-information__edit-btn" onclick="showNameInput">
+                            {% include 'icons/pencil.tmpl.njk' %}
+                        </button>
+                    {% endif %}
+                </div>
+            {% endif %}
+
             {% if lastVisit %}
                 <p class="brief-information__visit-info">{{lastVisit}}</p>
             {% endif %}
         </div>
     </div>
 {% endmacro %}
+
+{{briefInformation(avatarComponentId, canChangeName, displayedNameInput, name, lastVisit)}}
