--- a/src/client/assets/styles/common.css
+++ b/src/client/assets/styles/common.css
@@ -101,3 +101,8 @@ button {
 .scrollbar::-webkit-scrollbar-thumb {
     background-color: rgba(66, 63, 99, 0.2);
 }
+
+#root {
+    width : 100%;
+    height: 100%;
+}
