--- a/src/client/static/pages/sign-up-step-two.tmpl.njk
+++ b/src/client/static/pages/sign-up-step-two.tmpl.njk
@@ -1,31 +1,18 @@
 {% from "components/input.tmpl.njk" import input %}
-{% from "components/btn-submit.tmpl.njk" import btnSubmit %}
+{% from "components/btn.tmpl.njk" import btn %}
 
 <main class="auth-b">
     <div class="auth-b__gradient">
         <div class="auth-b__container container">
             <div class="auth-b__form-container container container_center">
-                <form id="signUpStepTwoForm" class="auth-b__form" onsubmit="signUp(2)">
+                <form id="signUpStepTwoForm" class="auth-b__form" onSubmit="signUp">
                     <h1 class="auth-b__h1 h1">Sign Up</h1>
 
-                    {{input(
-                        name = 'login', 
-                        label = 'Username', 
-                        placeholder = 'Type your username',
-                        iconTemplate = 'icons/circle-login-icon.tmpl.njk'
-                    )}}
-
-                    {{input(
-                        name = 'password', 
-                        type = 'password',
-                        label = 'Password', 
-                        placeholder = 'Type your password',
-                        iconTemplate = 'icons/password-icon.tmpl.njk',
-                        withPaddingTop = true
-                    )}}
+                    {{loginInput}}
+                    {{passwordInput}}
 
                     <div class="auth-b__btn auth-b__btn_mt_42">
-                        {{ btnSubmit(text = 'Sign up') }}
+                        {{submitButton}}
                     </div>
 
                     <div class="auth-b__sign-up-link">
