--- a/src/client/static/pages/sign-up-step-two.tmpl.njk
+++ b/src/client/static/pages/sign-up-step-two.tmpl.njk
@@ -5,22 +5,16 @@
     <div class="auth-b__gradient">
         <div class="auth-b__container container">
             <div class="auth-b__form-container container container_center">
-                <form id="signUpStepTwoForm" class="auth-b__form" onSubmit="signUp">
-                    <h1 class="auth-b__h1 h1">Sign Up</h1>
+                <h1 class="auth-b__h1 h1">Sign Up</h1>
 
-                    {{loginInput}}
-                    {{passwordInput}}
+                <div class="auth-b__form">
+                    <ng-container data-componentsids="{{secondStepFormId}}"></ng-container>
+                </div>
 
-                    <div class="auth-b__btn auth-b__btn_mt_42">
-                        {{submitButton}}
-                    </div>
-
-                    <div class="auth-b__sign-up-link">
-                        <span>Or
-                        </span>
-                        <a class="link" href="/static/login.html">Login</a>
-                    </div>
-                </form>
+                <div class="auth-b__sign-up-link">
+                    <span>Or</span>
+                    <a class="link" href="/static/login.html">Login</a>
+                </div>
             </div>
         </div>
     </div>
