--- a/src/client/assets/styles/common.css
+++ b/src/client/assets/styles/common.css
@@ -106,3 +106,9 @@ button {
     width : 100%;
     height: 100%;
 }
+
+app-form form {
+    display       : flex;
+    flex-direction: column;
+    align-items   : center;
+}
