--- a/src/client/assets/styles/settings.css
+++ b/src/client/assets/styles/settings.css
@@ -34,15 +34,13 @@
     background-color: var(--settings-divider-color);
 }
 
-.settings__form {
-    display       : flex;
-    flex-direction: column;
-    align-items   : center;
-
+.settings__form form {
     margin-top: 20px;
 }
 
-.settings__form-btn {
+.settings__form-btn-wrapper {
+    display: block!important;
+
     margin: 42px 0;
 }
 
